# ADC

./: .gitignore  DYNAMIC_CONFIG_INTEGRATION.md  METRICS_AND_CONFIG.md  NEXT_STEPS_PLAN.md  PROJECT_TRAINING_GUIDE.md  README.md  UEBERSICHT.md  adc_config.yaml  adc_setup_711.err  adc_setup_713.err  adc_setup_714.err  adc_setup_715.err  adc_setup_715.out  adc_train_712.err  adc_train_712.out  adc_train_716.err  adc_train_716.out  adc_train_717.err  adc_train_717.out  adc_train_718.err  adc_train_718.out  adc_train_719.err  adc_train_719.out  adc_train_720.err  adc_train_720.out  adc_train_721.err  adc_train_721.out  adc_train_722.err  adc_train_722.out  adc_train_723.err  adc_train_723.out  adc_train_724.err  adc_train_724.out  adc_train_725.err  adc_train_725.out  adc_train_726.err  adc_train_726.out  adc_train_727.err  adc_train_727.out  adc_train_728.err  (+39 more)
cldm/: cldm.py  dhi.py  logger.py  model.py
data/: prompt.json
data/dataset/: dataset.yaml
data/dataset/labels/test/: 03_image01.txt  (+310 more)
data/test/: prompt.json
data/train/: prompt.json
data/val/: prompt.json
ldm/: util.py
ldm/models/: autoencoder.py
ldm/models/diffusion/: ddim.py  ddpm.py
ldm/modules/diffusionmodules/: model.py  openaimodel.py  util.py
ldm/modules/encoders/: modules.py
models/: cldm_v15.yaml
runs/paper_faithful_scratch_20260419_233156_full_paper_scratch/version_0/: metrics.csv
runs/polyp_transfer_20260419_233156_full_transfer_base/version_0/: metrics.csv
runs/scratch/version_0/: metrics.csv
slurm/: infer.sh  setup.sh  submit_experiments.sh  train.sh  train_all.sh
(+1989 files in other folders)
